# event_processing_pipeline

./: Dockerfile  Makefile  README.md  development_client.py  event_collector_server.py  event_validation.py  fake_data.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy_to_azure.yml  lint.yml
tests/: integration_tests.py  test_event_collector_server.py  test_event_validation.py
tests/files/: serving_events_test.csv  user_events_test.csv  validated_events_test.csv
