[tool.poetry]
name = "event_processing_pipeline"
version = "0.1.0"
description = "A Take-Home Programming Exercise"
authors = ["Milos Grubjesic <milos.g@toptal.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
requests = "^2.28.2"
coverage = "^7.1"
Faker = "^17.0.0"
Flask-Testing = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
