[tool.poetry]
name = "event_processing_pipeline"
version = "0.1.0"
description = "A Take-Home Programming Exercise"
authors = ["Milos Grubjesic <milos.g@toptal.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.1"
pandas = "^2.1.4"

[tool.poetry.dev-dependencies]
requests = "^2.31.0"
coverage = "^7.4"
Faker = "^22.2.0"
Flask-Testing = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
